<resources>
    <string name="app_name">Micro Momentums</string>
    <string name="hello_world">Hello World!</string>
    <string name="about"><b>Micro Momentum was developed and created by:</b> \n
        \n
        <b>Sahand Milaninia</b> \n
        <a href="http://www.linkedin.com/in/sahandmilaninia"><i>http://www.linkedin.com/in/sahandmilaninia</i></a>
        \n
        \n

        <b>Previous members no longer contributing:</b> \n
        \n
        <b>Brad Nissen</b> \n
        <a href="https://www.linkedin.com/in/bradnissen/"><i>https://www.linkedin.com/in/bradnissen/</i></a> \n
        \n
       <b>Nathan Cobb</b> \n
        <a href="http://www.linkedin.com/in/ncobb01"><i>http://www.linkedin.com/in/ncobb01</i></a> \n
        \n
       <b>Jeremiah Smith</b> \n
        <a href="https://www.linkedin.com/in/jeremiahjsmith/"><i>https://www.linkedin.com/in/jeremiahjsmith/</i></a> \n
        \n

        <b><ul>Development overseen by:</ul></b> \n
        \n
<b>Ben Tunigold</b> – Client


    </string>
    <string name="how">What is Momentum trading? Momentum trading is a stock buying strategy where traders buy and sell stock based on its price trend.
        (Up or down)  This momentum can be determined by multiple factors such as trading volume and rate of price changes.
        By momentum trading, you are betting an asset price which is moving in a certain direction will continue to move that direction until the trend loses strength.
For more information on Momentum trading, visit:\n
        \n
        <a href="https://www.investopedia.com/trading/introduction-to-momentum-trading/">https://www.investopedia.com/trading/introduction-to-momentum-trading/</a> \n
         \n
        <a href="https://www.fxcm.com/insights/what-is-momentum-trading/">https://www.fxcm.com/insights/what-is-momentum-trading/</a> \n
        \n
        Micro Momentum trading takes the ideas of momentum trading and applies it to a five minute interval.
        If a particular stock is trending up (or down), each five minute interval will give the indication and through comparative analysis will show positive (or negative) momentum. \n
        \n
        This app does not guarantee any profits will be made and is not intended to dictate trends in market data.
        The apps purpose is as an investing tool to provide better analysis for each traders own investing strategy. \n
        \n
        We list three-hundred stocks that have been selected for live price tracking using a real time stock service. \n
        \n
        The stock ticker symbol is listed to the left hand side of the screen. This column can be sorted by alphabetical order. \n
        \n
        The next columns list the price of the symbol in five minute increments starting at current price, and then work backwards to fifteen minutes past the current price. \n
        \n
        The percent change indicates the percent change the stock has had comparing the current price to the price fifteen minutes past. \n
        \n
        The momentum indicator shows if the stock has had a price increase three intervals in a row.
 </string>
    <string name="fillerText">filler</string>
    <string name="current">Current</string>
    <string name="last_5">Last 5</string>
    <string name="last_10">Last 10</string>
    <string name="daily_history_graph">Daily History Graph</string>
    <string name="no_graph_available_for_this_stock">No graph available for this stock</string>
    <string name="track">Track</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Default</string>
    <string name="msg_subscribe_failed">Failed to subscribe to topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="micro_momentums">Micro Momentums</string>
</resources>
