<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#b9c6ba"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true">


    <TextView
        android:id="@+id/popup_stock_symbol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fillerText"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/popup_value_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/current"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/popup_last5_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/last_5"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/popup_last10_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/last_10"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/popup_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fillerText"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/popup_last5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fillerText"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/popup_last10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fillerText"
            android:textAlignment="center" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/popup_last_updated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/fillerText"
        android:textAlignment="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_weight="1" />

    <Switch
        android:id="@+id/popup_track_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:splitTrack="false"
        android:text="@string/track" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/daily_history_graph"
        android:textAlignment="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_weight="1" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/daily_graph"
        android:layout_width="match_parent"
        android:layout_height="240dip" />

    <TextView
        android:id="@+id/popup_no_graph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_graph_available_for_this_stock"
        android:textAlignment="center"
        android:visibility="gone" />
</LinearLayout>